# BetaRT

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md
docs/: hook-points.md
docs/superpowers/plans/: 2026-06-30-game-rain-particles-toggle.md
java-src/: DirtyChunkSection.java  McrtxFovSlider.java  McrtxGameplaySettingsUi.java  McrtxGraphicsSettingsUi.java  McrtxHookPerfTracker.java  McrtxHookScreenshotHelper.java  McrtxHookSettingsUi.java  McrtxMaterialSettingsUi.java  McrtxOptionsScreen.java  McrtxQuickSettingsScreen.java  McrtxSettingsCategories.java  McrtxSettingsCategoryUi.java  McrtxSssQuickScreen.java  McrtxWaterTransmissionSlider.java  MinecraftRemixHooks.java  RemixBlockOutlineCapture.java  RemixCameraState.java  RemixCaveCulling.java  RemixChunkCapture.java  RemixCloudCapture.java  RemixDestroyOverlayCapture.java  RemixDynamicEntityCapture.java  RemixFogCapture.java  RemixParticleCapture.java  RemixUiCapture.java  RemixWorldListener.java  cb.java
java-src/mcrtx/bridge/: CameraPose.java  ColorMath.java  HookProfiler.java  Lwjgl2MinecraftPlatform.java  Lwjgl3MinecraftPlatform.java  LwjglWindowHandleResolver.java  MatrixMath.java  McrtxCloudMode.java  McrtxDebugSettings.java  McrtxDebugSettingsNative.java  McrtxGameplaySettings.java  McrtxGameplaySettingsNative.java  McrtxGraphicsSettingsNative.java  McrtxMaterialSettings.java  McrtxMaterialSettingsNative.java  (+10 more)
native/: CMakeLists.txt
native/include/mcrtx/: perf_log.hpp  remix_cloud_mode.hpp  remix_renderer.hpp  remix_renderer_dynamic.hpp  remix_renderer_frame.hpp  remix_renderer_overlay.hpp  remix_renderer_scene.hpp  render_internals.hpp  tracy.hpp  world_origin.hpp
native/src/: celestial_textures.cpp  jni_bridge.cpp  jni_settings_debug.cpp  jni_settings_gameplay.cpp  jni_settings_graphics.cpp  jni_settings_material.cpp  perf_log.cpp  remix_chunk_mesh.cpp  remix_cloud_mode.cpp  remix_materials.cpp  remix_renderer.cpp  remix_settings_debug.cpp  remix_settings_gameplay.cpp  remix_settings_graphics.cpp  remix_settings_material.cpp  remix_subsystem_dynamic.cpp  remix_subsystem_meshes.cpp  remix_window.cpp  render_internals.cpp  world_origin.cpp
native/tests/: celestial_textures_tests.cpp  remix_cloud_mode_tests.cpp  world_origin_tests.cpp
scripts/: analyze-perf.py  build-patched-client.ps1  decompile-minecraft.ps1  deploy-test-build.ps1  generate-sss-maps.py
src/native/: CMakeLists.txt
src/native/include/mcrtx/chunks/: remix_block_geometry_effects.hpp  remix_block_geometry_fixtures.hpp  remix_block_geometry_fluids.hpp  remix_block_geometry_natural.hpp  remix_block_geometry_pistons.hpp  remix_block_geometry_redstone.hpp  remix_block_geometry_structures.hpp  remix_chunk_build.hpp  remix_chunk_policy.hpp
src/native/include/mcrtx/core/: build_version.hpp.in  jni_helpers.hpp  remix_geometry_common.hpp  remix_render_common.hpp  remix_renderer.hpp  runtime_config.hpp  world_origin.hpp
src/native/include/mcrtx/entities/: remix_material_dynamic_policy.hpp  remix_renderer_dynamic.hpp
src/native/include/mcrtx/lifecycle/: remix_renderer_frame.hpp  remix_renderer_timing.hpp
src/native/include/mcrtx/materials/: remix_material_common.hpp
src/native/include/mcrtx/particles/: remix_renderer_overlay.hpp
src/native/include/mcrtx/platform/: remix_window_internals.hpp
src/native/include/mcrtx/scene/: celestial_textures.hpp  remix_light_common.hpp  remix_renderer_scene.hpp
src/native/src/chunks/: jni_chunk.cpp  remix_block_geometry_effects.cpp  remix_block_geometry_fixtures.cpp  remix_block_geometry_fluids.cpp  remix_block_geometry_natural.cpp  remix_block_geometry_pistons.cpp  remix_block_geometry_redstone.cpp  remix_block_geometry_structures.cpp  remix_chunk_capture.cpp  remix_chunk_geometry.cpp  remix_chunk_occupancy.cpp  remix_chunk_policy.cpp  remix_chunk_residency.cpp  remix_chunk_submission.cpp
src/native/src/core/: remix_geometry_common.cpp  remix_render_utils.cpp  remix_renderer_resources.cpp  remix_subsystem_meshes.cpp  runtime_config.cpp  world_origin.cpp
src/native/src/entities/: jni_dynamic_entity.cpp  remix_material_dynamic.cpp  remix_subsystem_dynamic.cpp
src/native/src/lifecycle/: jni_lifecycle.cpp  jni_perf.cpp  perf_log.cpp  remix_renderer_frame.cpp  remix_renderer_lifecycle.cpp  remix_renderer_present.cpp
src/native/src/materials/: remix_material_paths.cpp  remix_material_terrain.cpp  remix_materials.cpp
src/native/src/particles/: jni_particle_overlay.cpp  remix_material_block_outline.cpp  remix_material_particles.cpp  remix_overlay_destroy.cpp  remix_overlay_fire.cpp  remix_overlay_outline.cpp  remix_overlay_particles.cpp
src/native/src/platform/: remix_window_input.cpp  remix_window_internals.cpp  remix_window_output.cpp
src/native/src/scene/: celestial_textures.cpp  jni_scene.cpp  remix_cloud_mode.cpp  remix_light_common.cpp  remix_renderer_scene.cpp  remix_subsystem_config.cpp  remix_subsystem_lights.cpp  remix_subsystem_world.cpp
src/native/src/settings/: jni_settings_debug.cpp  jni_settings_gameplay.cpp  jni_settings_graphics.cpp  jni_settings_material.cpp  remix_settings_debug.cpp  remix_settings_gameplay.cpp  remix_settings_graphics.cpp  remix_settings_material.cpp
src/native/src/ui/: jni_ui.cpp  remix_renderer_ui.cpp
src/native/tests/core/: world_origin_tests.cpp
src/native/tests/scene/: celestial_textures_tests.cpp  remix_cloud_mode_tests.cpp
tests/java/: McrtxCloudModeTest.java  McrtxCloudModeWiringTest.java  McrtxNameTagCaptureTest.java  McrtxRainParticlesToggleTest.java  McrtxRuntimeCloudSettingsConfigTest.java  McrtxRuntimeCloudSettingsDefaultTest.java  McrtxSourceOrganizationTest.java  McrtxSparseRenderingOptionTest.java  McrtxWaterTransmissionSettingsTest.java  SheepWoolColorTest.java
work/decompiled-cfr/: a.java  aa.java  ab.java  ac.java  ad.java  ae.java  af.java  ag.java  ah.java  ai.java  aj.java  ak.java  al.java  am.java  an.java  ao.java  ap.java  aq.java  ar.java  as.java  at.java  au.java  av.java  aw.java  ax.java  ay.java  az.java  b.java  ba.java  bb.java  bc.java  bd.java  be.java  bf.java  bg.java  bh.java  bi.java  bj.java  bk.java  bl.java  (+636 more)
(+163 files in other folders)
